<resources>
    <string name="app_name">L04_Reservation</string>
    <string name="enter_name">Enter Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="numofPax">Num Of People*</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="preferred_area">Preferred Area:</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="non_smoking_area">Non-Smoking Area</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="reservation">RESERVATION</string>
</resources>