<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#61BAA0"
    android:orientation="vertical"
    android:visibility="visible">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="221dp"
        android:layout_weight="12"
        android:scaleX="6"
        android:scaleY="1"
        app:srcCompat="@drawable/d9c2b7396c737ae1a922d4bd112e1522" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:fontFamily="@font/bevan"
                android:gravity="center"
                android:text="@string/reservation"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/entName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#CD3535" />

                <EditText
                    android:id="@+id/entPhone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="text"
                    android:textColorHint="#CD3535" />

                <EditText
                    android:id="@+id/entPax"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/numofPax"
                    android:inputType="text"
                    android:textColorHint="#CD3535" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#578F7F"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="20sp" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#578F7F"
                    android:calendarViewShown="false"
                    android:timePickerMode="spinner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/preferredArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bevan"
                        android:text="@string/preferred_area"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/radioButtonSmoker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/smoking_area" />

                    <RadioButton
                        android:id="@+id/radioButtonNonSmoker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/non_smoking_area" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    android:textColor="#000000"
                    android:textColorLink="#FFFFFF"
                    app:backgroundTint="#A6D5C7" />

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear"
                    android:textColor="#000000"
                    app:backgroundTint="#A6D5C7" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>